seaqt/QtMultimedia/gen_qmediarecordercontrol.h

class QMediaRecorderControl;
class QMetaObject;
class QUrl;
typedef struct QMediaRecorderControl QMediaRecorderControl;
typedef struct QMetaObject QMetaObject;
typedef struct QUrl QUrl;
QMetaObject* QMediaRecorderControl_metaObject(const QMediaRecorderControl* self);
void* QMediaRecorderControl_metacast(QMediaRecorderControl* self, const char* param1);
int QMediaRecorderControl_metacall(QMediaRecorderControl* self, int param1, int param2, void** param3);
struct seaqt_string QMediaRecorderControl_tr(const char* s);
struct seaqt_string QMediaRecorderControl_trUtf8(const char* s);
QUrl* QMediaRecorderControl_outputLocation(const QMediaRecorderControl* self);
bool QMediaRecorderControl_setOutputLocation(QMediaRecorderControl* self, QUrl* location);
int QMediaRecorderControl_state(const QMediaRecorderControl* self);
int QMediaRecorderControl_status(const QMediaRecorderControl* self);
long long QMediaRecorderControl_duration(const QMediaRecorderControl* self);
bool QMediaRecorderControl_isMuted(const QMediaRecorderControl* self);
double QMediaRecorderControl_volume(const QMediaRecorderControl* self);
void QMediaRecorderControl_applySettings(QMediaRecorderControl* self);
void QMediaRecorderControl_stateChanged(QMediaRecorderControl* self, int state);
void QMediaRecorderControl_connect_stateChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QMediaRecorderControl_statusChanged(QMediaRecorderControl* self, int status);
void QMediaRecorderControl_connect_statusChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QMediaRecorderControl_durationChanged(QMediaRecorderControl* self, long long position);
void QMediaRecorderControl_connect_durationChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, long long), void (*release)(intptr_t));
void QMediaRecorderControl_mutedChanged(QMediaRecorderControl* self, bool muted);
void QMediaRecorderControl_connect_mutedChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QMediaRecorderControl_volumeChanged(QMediaRecorderControl* self, double volume);
void QMediaRecorderControl_connect_volumeChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QMediaRecorderControl_actualLocationChanged(QMediaRecorderControl* self, QUrl* location);
void QMediaRecorderControl_connect_actualLocationChanged(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, QUrl*), void (*release)(intptr_t));
void QMediaRecorderControl_error(QMediaRecorderControl* self, int error, struct seaqt_string errorString);
void QMediaRecorderControl_connect_error(QMediaRecorderControl* self, intptr_t slot, void (*callback)(intptr_t, int, struct seaqt_string), void (*release)(intptr_t));
void QMediaRecorderControl_setState(QMediaRecorderControl* self, int state);
void QMediaRecorderControl_setMuted(QMediaRecorderControl* self, bool muted);
void QMediaRecorderControl_setVolume(QMediaRecorderControl* self, double volume);
struct seaqt_string QMediaRecorderControl_tr2(const char* s, const char* c);
struct seaqt_string QMediaRecorderControl_tr3(const char* s, const char* c, int n);
struct seaqt_string QMediaRecorderControl_trUtf82(const char* s, const char* c);
struct seaqt_string QMediaRecorderControl_trUtf83(const char* s, const char* c, int n);
const QMetaObject* QMediaRecorderControl_staticMetaObject();
void QMediaRecorderControl_delete(QMediaRecorderControl* self);